fix: text visibility in dark mode

--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -18,8 +18,8 @@
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
-[data-theme='dark'] {
-  --ifm-color-primary: #613583;
+[data-theme="dark"] {
+  --ifm-color-primary: hsl(250 95% 76.8%);
   --ifm-color-primary-dark: #522774;
   --ifm-color-primary-darker: #441a66;
   --ifm-color-primary-darkest: #441a66;
